<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:showIn="@layout/activity_main"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cvAd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/common_padding_default"
                android:layout_marginHorizontal="@dimen/common_padding_default"
                android:padding="5dp"
                >
                <ImageView
                    android:id="@+id/imgCard"
                    android:layout_width="@dimen/image_size"
                    android:layout_height="@dimen/image_size"
                    android:layout_marginTop="@dimen/common_padding_min"
                    android:layout_marginHorizontal="@dimen/common_padding_min"
                    android:src="@drawable/dave"
                    android:background="#D292FD"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    />

                <TextView
                    android:id="@+id/titleCard"
                    android:layout_width="@dimen/common_padding_none"
                    android:layout_height="wrap_content"
                    android:text="Black friday"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall"
                    app:layout_constraintStart_toEndOf="@+id/imgCard"
                    app:layout_constraintTop_toTopOf="@+id/imgCard"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginLeft="10dp"
                    />
                <TextView
                    android:id="@+id/descCard"
                    android:layout_width="@dimen/common_padding_none"
                    android:layout_height="wrap_content"
                    android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum."
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:maxLines="@integer/max_lines_description"
                    android:ellipsize="end"
                    app:layout_constraintStart_toStartOf="@+id/titleCard"
                    app:layout_constraintTop_toBottomOf="@+id/titleCard"
                    app:layout_constraintEnd_toEndOf="parent"
                    />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    app:layout_constraintTop_toBottomOf="@+id/descCard"
                    android:gravity="end"
                    android:layout_marginTop="10dp"
                    >
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnSkip"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_skip"
                        style="@style/Widget.MaterialComponents.Button.TextButton"
                        />
                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/btnBuy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_buy"
                        app:icon="@drawable/ic_shop"

                        />
                </LinearLayout>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="16dp"
                >
                <ImageView
                    android:id="@+id/imgUrl"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/img_cover_height"
                    app:layout_constraintTop_toTopOf="parent"
                    android:background="#FDBCBC"
                    />

                <TextView
                    android:id="@+id/titleCardAlt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/title_black_friday"
                    android:textAppearance="?attr/textAppearanceHeadlineSmall"
                    app:layout_constraintTop_toBottomOf="@+id/imgUrl"
                    android:layout_marginLeft="10dp"
                    />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/titleCardAlt"
                    android:layout_marginTop="14dp"
                    android:layout_marginHorizontal="@dimen/common_padding_default"
                    android:hint="@string/hint_email"
                    app:endIconMode="clear_text"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilUrl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tilEmail"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="16dp"
                    app:helperText="Required"
                    android:hint="@string/hint_image_url"
                    app:endIconMode="clear_text"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfUrl"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textUri"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/tilPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@+id/tilUrl"
                    android:layout_marginHorizontal="16dp"
                    android:hint="@string/hint_password"
                    app:endIconMode="password_toggle"
                    android:enabled="false"
                    >
                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/tfPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.divider.MaterialDivider
                    android:id="@+id/materialDivider"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/tilPassword"
                    app:layout_constraintTop_toBottomOf="@id/tilPassword"
                    android:layout_marginVertical="10dp"
                    />

                <com.google.android.material.checkbox.MaterialCheckBox
                    android:id="@+id/cbEnablePassword"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/tilPassword"
                    app:layout_constraintTop_toBottomOf="@id/materialDivider"
                    android:text="@string/cb_enable_passowrd"
                    />

                <Button
                    android:id="@+id/btnTemp"
                    android:layout_marginTop="10dp"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="Load Image"
                    app:layout_constraintTop_toBottomOf="@+id/btgColors"
                    app:layout_constraintStart_toStartOf="@+id/tilPassword"
                    app:layout_constraintEnd_toEndOf="@+id/tilPassword"
                    android:visibility="gone"
                    />

                <com.google.android.material.switchmaterial.SwitchMaterial
                    android:id="@+id/swFab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="@id/tilPassword"
                    app:layout_constraintTop_toTopOf="@id/cbEnablePassword"
                    app:layout_constraintBottom_toBottomOf="@id/cbEnablePassword"
                    android:text="@string/sw_hide_fab"
                    android:checked="true"
                    />

                <com.google.android.material.chip.Chip
                    android:id="@+id/cpEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/cbEnablePassword"
                    app:layout_constraintTop_toBottomOf="@id/cbEnablePassword"
                    android:text="cryzrz@gmail.com"
                    android:checkable="true"
                    app:closeIconEnabled="true"
                    />

                <com.google.android.material.slider.Slider
                    android:id="@+id/sldVolumen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/cpEmail"
                    android:valueFrom="0.0"
                    android:valueTo="10.0"
                    android:value="7"
                    android:stepSize="1.0"
                    />

                <View
                    android:id="@+id/divider"
                    android:layout_width="0dp"
                    android:layout_height="1dp"
                    android:background="@color/devider_color"
                    app:layout_constraintStart_toStartOf="@+id/sldVolumen"
                    app:layout_constraintTop_toBottomOf="@+id/sldVolumen"
                    app:layout_constraintEnd_toEndOf="@id/sldVolumen"
                    android:layout_marginTop="@dimen/common_padding_moddle"
                    />



                <TextView
                    android:id="@+id/tvSubTitle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/title_black_friday"
                    android:textAppearance="?attr/textAppearanceLabelMedium"
                    app:layout_constraintStart_toStartOf="@+id/sldVolumen"
                    app:layout_constraintTop_toBottomOf="@+id/divider"
                    app:layout_constraintEnd_toEndOf="@id/sldVolumen"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="24dp"

                    />
                <TextView
                    android:id="@+id/tvMessage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/large_description"
                    android:textAppearance="?attr/textAppearanceBodySmall"
                    android:maxLines="@integer/max_lines_message"
                    android:ellipsize="end"
                    app:layout_constraintStart_toStartOf="@+id/titleCardAlt"
                    app:layout_constraintTop_toBottomOf="@id/tvSubTitle"
                    app:layout_constraintEnd_toEndOf="@id/tvSubTitle"
                    />

                <com.google.android.material.button.MaterialButtonToggleGroup
                    android:id="@+id/btgColors"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="@id/tvMessage"
                    app:layout_constraintTop_toBottomOf="@id/tvMessage"
                    app:layout_constraintEnd_toEndOf="@id/tvMessage"
                    android:layout_marginTop="16dp"
                    app:singleSelection="true"
                    >
                    <Button
                        android:id="@+id/btnRed"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btnred"
                        style="?attr/materialButtonOutlinedStyle"
                        />
                    <Button
                        android:id="@+id/btnBlue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_blue"
                        style="?attr/materialButtonOutlinedStyle"
                        />
                    <Button
                        android:id="@+id/btnGreen"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/btn_green"
                        style="?attr/materialButtonOutlinedStyle"
                        />
                </com.google.android.material.button.MaterialButtonToggleGroup>

                <FrameLayout
                    android:id="@+id/containerNotifications"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toBottomOf="@id/btgColors"
                    app:layout_constraintStart_toStartOf="@id/tvMessage"
                    android:paddingTop="16dp"
                    android:paddingEnd="16dp"
                    >
                    <ImageButton
                        android:id="@+id/ibNotifications"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/ic_notifications"
                        android:background="?attr/selectableItemBackgroundBorderless"
                        />
                </FrameLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/okBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/common_ok"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/containerNotifications"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginVertical="16dp"
                    android:layout_marginBottom="120dp"
                    />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>